added some text to ch4

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -55,6 +55,22 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\RTA7HFVR\\Cook et al. - Framework Assessment of the Offshore American Lobs.pdf}
 }
 
+@article{dornerSpatialTemporalPatterns2018,
+  title = {Spatial and Temporal Patterns of Covariation in Productivity of {{Chinook}} Salmon Populations of the Northeastern {{Pacific Ocean}}},
+  author = {Dorner, Brigitte and Catalano, Matthew J. and Peterman, Randall M.},
+  year = {2018},
+  month = jul,
+  journal = {Canadian Journal of Fisheries and Aquatic Sciences},
+  volume = {75},
+  number = {7},
+  pages = {1082--1095},
+  issn = {0706-652X, 1205-7533},
+  doi = {10.1139/cjfas-2017-0197},
+  abstract = {We expand on previous analyses of environmental factors related to productivity of Chinook salmon (Oncorhynchus tshawytscha) populations by analysing data on adult recruits per spawner from 24 wild (not hatchery) Chinook salmon stocks from Oregon through western Alaska. To determine the degree to which changes in productivity are shared and to help identify environmental variables that might be related to those changes, we estimated the magnitude and spatial characteristics of positive correlations in productivity trends among stocks separated by various distances. We used dynamic factor analysis to characterize shared time trends in productivity and found that these trends were most closely associated with the North Pacific Gyre Oscillation and, to a lesser extent, with the location of the bifurcation in the North Pacific Current as it reaches North America's west coast. Chinook productivity patterns of separate populations have also become more synchronous in recent years, similar to results reported for other species of Pacific salmon. Such recent changes may reduce the resilience of the species to effects of climate change and habitat modification.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\DXS693GP\\Dorner et al. - 2018 - Spatial and temporal patterns of covariation in pr.pdf}
+}
+
 @article{dowlingEmpiricalHarvestStrategies2015,
   title = {Empirical Harvest Strategies for Data-Poor Fisheries: A Review of the Literature},
   shorttitle = {Empirical Harvest Strategies for Data-Poor Fisheries},
@@ -124,6 +140,17 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\MHF9YRE8\\Holt et al. - 2009 - Indicators of Status and Benchmarks for Conservati.pdf}
 }
 
+@book{huangRecoveryPotentialAssessment2021,
+  title = {Recovery Potential Assessment for {{Fraser River Sockeye Salmon}} ({{Oncorhynchus}} Nerka) - Nine Designatable Units: Probability of Achieving Recovery Targets - Elements 12, 13, 15, 19-22},
+  shorttitle = {Recovery Potential Assessment for {{Fraser River Sockeye Salmon}} ({{Oncorhynchus}} Nerka) - Nine Designatable Units},
+  author = {Huang, Ann-Marie and {Canadian Science Advisory Secretariat} and {Canada} and {Department of Fisheries and Oceans} and {Pacific Region}},
+  year = {2021},
+  isbn = {978-0-660-38745-1},
+  langid = {english},
+  annotation = {OCLC: 1260853250},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\CP4BKWWZ\\Huang et al. - 2021 - Recovery potential assessment for Fraser River Soc.pdf}
+}
+
 @article{kronlundConsiderationsDesignRebuilding2021,
   title = {Considerations for the Design of Rebuilding Strategies for {{Canadian}} Fish Stocks},
   author = {Kronlund, A. R and , Canadian Science Advisory Secretariat and {Canada} and {Department of Fisheries and Oceans} and {National Capital Region}},
@@ -155,6 +182,22 @@
   doi = {10.12952/journal.elementa.000114},
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\Z2FEH4G7\\37_326_1_SM.pdf}
+}
+
+@article{malickRegionalScaleDeclinesProductivity2016,
+  title = {Regional-{{Scale Declines}} in {{Productivity}} of {{Pink}} and {{Chum Salmon Stocks}} in {{Western North America}}},
+  author = {Malick, Michael J. and Cox, Sean P.},
+  editor = {Belgrano, Andrea},
+  year = {2016},
+  month = jan,
+  journal = {PLOS ONE},
+  volume = {11},
+  number = {1},
+  pages = {e0146009},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0146009},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\747SR8QZ\\Malick and Cox - 2016 - Regional-Scale Declines in Productivity of Pink an.pdf}
 }
 
 @article{marentetteSpecificationPrecautionaryApproach2021,
@@ -211,6 +254,16 @@
   abstract = {Open access (or the " tragedy of the commons ") is a well-known explanation of fish stock depletion and of overcapacity. This chapter focuses on the complexity of proper management of the commons, specifically, policies to control total allowable catch (TAC) and total harvesting capacity: what are the major challenges, why is it easy for policy makers to misperceive, and how can communication be improved to ensure more rapid learning? Section 45.2 deals with the problem of overcapacity and resource depletion in the process of adapting fishing industries to resource limits. Section 45.3 considers " steady-state " strategies for controlling TAC and total capacity in fisheries with environmental variation. Section 45.4 deals with implications of assessment error for steady-state policies. Finally, section 45.5 discusses boundaries of models and methods and calls for balanced interdisciplinary analysis, and section 45.6 concludes.}
 }
 
+@techreport{withlerGeneticallyBasedTargets2018,
+  type = {Research {{Document}}},
+  title = {Genetically {{Based Targets}} for {{Enhanced Contributions}} to {{Canadian Pacific Chinook Salmon Populations}}},
+  author = {Withler, R.E. and Bradford, M.J. and Willis, D.M. and Holt, C.A.},
+  year = {2018},
+  number = {2018/019},
+  pages = {88},
+  institution = {{Fisheries and Oceans Canada}}
+}
+
 @article{zhangAccountingNonstationaryStock2021,
   title = {Accounting for Non-Stationary Stock\textendash Recruitment Relationships in the Development of {{MSY}}-Based Reference Points},
   author = {Zhang, Fan and Regular, Paul M and Wheeland, Laura and Rideout, Rick M and Morgan, M Joanne},
@@ -227,3 +280,5 @@
   langid = {english},
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\79236HY9\\Zhang et al. - 2021 - Accounting for non-stationary stock–recruitment re.pdf}
 }
+
+
